# neotree

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/neotree/: __init__.py  cli.py  filter.py  gitignore.py  preset.py  scanner.py
src/neotree/formatter/: compat.py  csv_.py  markdown.py  short.py
tests/: conftest.py  test_cli.py  test_compat.py  test_csv.py  test_filter.py  test_gitignore.py  test_golden_compat.py  test_golden_csv.py  test_golden_md.py  test_golden_short.py  test_md.py  test_order.py  test_preset.py  test_scanner.py  test_short.py
tests/golden/: compat_all_files.txt  compat_ascii.txt  compat_ascii_dirsfirst.txt  compat_basic.txt  compat_combined.txt  compat_depth1.txt  compat_depth2.txt  compat_depth2_dirsfirst.txt  compat_dirs_only.txt  compat_dirs_only_noreport.txt  compat_dirsfirst.txt  compat_dirsfirst_noreport.txt  compat_exclude_dirsfirst.txt  compat_exclude_multi.txt  compat_exclude_tests.txt  compat_exclude_wildcard.txt  compat_gitignore.txt  compat_gitignore_dirsfirst.txt  compat_noreport.txt  csv_basic.txt  csv_depth1.txt  csv_exclude_tests.txt  csv_files_only.txt  csv_gitignore.txt  csv_preset_python.txt  short_all_files.txt  short_basic.txt  short_budget_count.txt  short_count.txt  short_depth1.txt  short_depth2.txt  short_exclude_multi.txt  short_exclude_tests.txt  short_exclude_wildcard.txt  short_gitignore.txt  short_preset_node.txt  short_preset_python.txt
