[project]
name = "neotree"
version = "0.1.0"
description = "tree-compatible structure viewer with compact grouped output"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pathspec>=1.0"]

[project.scripts]
ntree = "neotree.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neotree"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.isort] 
known-first-party = ["neotree"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false
